# iridium-proxy

./: Cargo.toml  README.md
.cargo/: config.toml
README/: cloudns.md  cross-compile.md  knx.md  linux.md  tags.json
buildroot/: .config  shadow
buildroot/rootfs_overlay/etc/network/: interfaces
linux/bluez-5.37/: Dockerfile
linux/etc/init.d/: S93iridium-proxy
src/: breezart.rs  commons.rs  errors.rs  iridium.rs  knx.rs  log.rs  main.rs  websocket.rs
www/static/: config.json  index.html  lighting.json
www/tls/: cert.pem  key.pem  openssl.cnf
