[package]
name = "iridium-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "*", default-features = false }
warp = { version = "*", default-features = false, features = ["tls"] } # exists in warp-embed
tokio = { version = "*", default-features = false, features = ["macros", "rt-multi-thread"] } # exists in reqwest, warp
rust-embed = { version = "*", default-features = false, features = ["include-exclude"] } # exists in warp-embed
warp-embed = { version = "0.4.0", default-features = false }
reqwest = { version = "0.11.18", default-features = false, features = ["stream", "wasm-streams"] }
tungstenite = { version = "*", default-features = false } # exists in warp::tokio-tungstenite,
once_cell = { version = "*", default-features = false } # exists in reqwest::tracing::tracing-core
thiserror = { version = "*", default-features = false } # exists in tungstenite
hyper = { version = "*", default-features = false } # exists in futures, reqwest, warp
url = { version = "*", default-features = false } # exists in reqwest
const_format = { version = "0.2.31", default-features = false }
crossbeam-channel = { version = "0.5.8" }
tracing = { version = "*", features = ["max_level_debug"] }# exists in warp::tokio
tracing-subscriber = { version = "*", features = ["local-time", "time"] }# exists in tracing
time = { version = "0.3.23", features = ["macros"] }# exists in tracing-subscriber